# tap-sharepoint

./: .gitignore  README.md  config_example.json  config_sample.json  pyproject.toml
tap_sharepoint/: auth.py  file_stream.py  tap.py
