[tool.poetry]
name = "tap-sharepoint"
version = "1.0.0"
description = "`tap-sharepoint` is a Singer tap for sharepoint, built with the Meltano Singer SDK."
authors = ["Hotglue"]
keywords = [
    "sharepoint",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-sharepoint = 'tap_sharepoint.tap:Tapsharepoint.main'

